Update to 1.21